--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -13,7 +13,7 @@ http {
 
   server {
     listen ##PORT##;
-    server_name ##SERVER_NAME##;
+    server_name _;
 
     client_max_body_size ##CLIENT_MAX_BODY_SIZE##;
     proxy_read_timeout ##PROXY_READ_TIMEOUT##;
@@ -28,6 +28,12 @@ http {
       proxy_set_header X-Forwarded-Host $host;
       # Do not pass Authorization header to destination
       proxy_set_header Authorization "";
+      proxy_http_version 1.1; 
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_read_timeout 86400;
     }
   }
 
